--- a/plate_tracking/requirements.txt
+++ b/plate_tracking/requirements.txt
@@ -1,30 +1,119 @@
-tf-models-official==2.3.0
-# tensorflow-hub is to load Hub model. Specific version is required by TFJS.
-tensorflow-hub>=0.7.0,<0.10; python_version < "3"
-tensorflow-hub>=0.7.0,<0.13; python_version >= "3"
-numpy>=1.17.3,<1.23.4
-pillow>=7.0.0
-sentencepiece>=0.1.91
-tensorflow-datasets>=2.1.0
-fire>=0.3.1
-flatbuffers>=2.0
-absl-py>=0.10.0
-urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
-tflite-support>=0.4.2
-tensorflowjs>=2.4.0,<3.19.0
-tensorflow>=2.6.0
-# b/196287362: This Numba + Librosa combination works for numpy 1.19, introduced
-# by TensorFlow 2.6.0.
-numba>=0.53
+absl-py==1.4.0
+array-record==0.4.1
+astunparse==1.6.3
+attrs==23.1.0
+audioread==3.0.1
+bleach==6.0.0
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
+click==8.1.7
+cycler==0.12.0
+Cython==3.0.2
+dataclasses==0.6
+decorator==5.1.1
+dm-tree==0.1.8
+etils==1.5.0
+fire==0.5.0
+flatbuffers==23.5.26
+fsspec==2023.9.2
+gast==0.5.4
+gin-config==0.5.0
+google-api-core==2.12.0
+google-api-python-client==2.101.0
+google-auth==2.23.2
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==0.4.6
+google-cloud-bigquery==3.11.4
+google-cloud-core==2.3.3
+google-crc32c==1.5.0
+google-pasta==0.2.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.60.0
+grpcio==1.59.0
+grpcio-status==1.48.2
+h5py==3.9.0
+httplib2==0.22.0
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+joblib==1.3.2
+kaggle==1.5.16
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+libclang==16.0.6
 librosa==0.8.1
-lxml>=4.6.1
-PyYAML>=5.1
-# The following are the requirements of efficientdet.
-matplotlib>=3.0.3,<3.5.0
-six>=1.12.0
-tensorflow-addons>=0.11.2
-neural-structured-learning>=1.3.1
-tensorflow-model-optimization>=0.5
-Cython>=0.29.13
+llvmlite==0.36.0
+lxml==4.9.3
+Markdown==3.4.4
+MarkupSafe==2.1.3
+matplotlib==3.4.3
+neural-structured-learning==1.4.0
+numba==0.53.0
+numpy==1.23.3
+oauthlib==3.2.2
+opencv-python-headless==4.8.1.78
+opt-einsum==3.3.0
+packaging==20.9
+pandas==2.1.1
+Pillow==10.0.1
+platformdirs==3.10.0
+pooch==1.7.0
+promise==2.3
+proto-plus==1.22.3
+protobuf==3.19.6
+psutil==5.9.5
+py-cpuinfo==9.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pybind11==2.11.1
+pycocotools==2.0.7
+pycparser==2.21
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-slugify==8.0.1
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+resampy==0.4.2
+rsa==4.9
 scann==1.2.6
+scikit-learn==1.3.1
+scipy==1.11.3
+sentencepiece==0.1.99
+six==1.16.0
+sounddevice==0.4.6
+soundfile==0.12.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.4
+tensorflow-addons==0.21.0
+tensorflow-datasets==4.9.0
+tensorflow-estimator==2.8.0
+tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-metadata==1.13.0
+tensorflow-model-optimization==0.7.5
+tensorflowjs==3.18.0
+termcolor==2.3.0
+text-unidecode==1.3
+tf-models-official==2.3.0
+tf-slim==1.1.0
 tflite-model-maker==0.4.2
+tflite-support==0.4.4
+threadpoolctl==3.2.0
+toml==0.10.2
+tqdm==4.66.1
+typeguard==2.13.3
+typing_extensions==4.8.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.25.11
+webencodings==0.5.1
+Werkzeug==3.0.0
+wrapt==1.15.0
+zipp==3.17.0
